cleaned up unneeded files and updated css for recommend page and table, results no longer stretch out input box

--- a/src/main/js/pages/table/hometable.css
+++ b/src/main/js/pages/table/hometable.css
@@ -1,7 +1,7 @@
 .hometable {
     margin: 0 auto;
     width: 100vw; 
-    max-width: 75rem; 
+    /* max-width: 75rem;  */
     display: flex;
     flex-direction: column; 
     align-items: center; 
