--- a/src/main/js/pages/table/recommend.css
+++ b/src/main/js/pages/table/recommend.css
@@ -10,17 +10,10 @@
 }
 
 .results{
-    margin: 0 auto; 
-    max-width: 75rem; 
-    display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center;
-    overflow: hidden;
     background-color: white;    
 }
 
-.resultsbox{
+.resultsbox{ 
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
     border: 2px solid #ccc; /* Gray border */
@@ -28,7 +21,7 @@
 }
 
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
+    /*width: 100%; /* Full width */
     padding: 12px; /* Some padding */ 
     border: 1px solid #ccc; /* Gray border */
     border-radius: 4px; /* Rounded borders */
